[gd_scene load_steps=16 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=8]
radius = 4.0

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=2]
radius = 20.5714

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.839216, 0.247059, 0.905882, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 1, 0.647059, 0.27451, 1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.345098, 0.415686, 0.996078, 1 )

[sub_resource type="SphereShape" id=7]
radius = 2.0

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.792157, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 100, 0.2, 100 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.486275, 0.580392, 1 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -50, 0.1, 50, 50, 0.1, 50, -50, -0.1, 50, 50, 0.1, 50, 50, -0.1, 50, -50, -0.1, 50, 50, 0.1, -50, -50, 0.1, -50, 50, -0.1, -50, -50, 0.1, -50, -50, -0.1, -50, 50, -0.1, -50, 50, 0.1, 50, 50, 0.1, -50, 50, -0.1, 50, 50, 0.1, -50, 50, -0.1, -50, 50, -0.1, 50, -50, 0.1, -50, -50, 0.1, 50, -50, -0.1, -50, -50, 0.1, 50, -50, -0.1, 50, -50, -0.1, -50, 50, 0.1, 50, -50, 0.1, 50, 50, 0.1, -50, -50, 0.1, 50, -50, 0.1, -50, 50, 0.1, -50, -50, -0.1, 50, 50, -0.1, 50, -50, -0.1, -50, 50, -0.1, 50, 50, -0.1, -50, -50, -0.1, -50 )

[sub_resource type="Environment" id=13]
background_energy = 0.34
ambient_light_color = Color( 0.690196, 0.690196, 0.690196, 1 )
ambient_light_energy = 0.18
tonemap_mode = 3
tonemap_exposure = 0.84
tonemap_white = 1.16

[sub_resource type="GIProbeData" id=14]
bounds = AABB( -60.5487, -32.9049, -63.1188, 121.097, 65.8099, 126.238 )
cell_size = 0.986232
to_cell_xform = Transform( 1.01396, 0, 0, 0, 1.01396, 0, 0, 0, 1.01396, 61.394, 33.3643, 64 )
dynamic_data = PoolIntArray( 0, 8, 128, 128, 128, 1, 0, 0, 0, 0, 0, 0, 262849504, 0, 0, 1065470325, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8441, 12.7571, 0 )
space_override = 1
gravity_point = true
gravity_vec = Vector3( 0, 0, 0 )
gravity = 89.34

[node name="StaticBody" type="StaticBody" parent="Area"]

[node name="CollisionShape" type="CollisionShape" parent="Area/StaticBody"]
shape = SubResource( 8 )
disabled = true

[node name="CSGSphere" type="CSGSphere" parent="Area"]
radius = 4.0
radial_segments = 18
rings = 13
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Box" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8441, 5.56983, 35.8206 )
linear_velocity = Vector3( 0, 0, -20 )

[node name="CSGBox" type="CSGBox" parent="Box"]
material = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Box"]
shape = SubResource( 3 )

[node name="Box2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8441, 22.5419, 29.0467 )
linear_velocity = Vector3( 0, 0, -10 )

[node name="CSGBox" type="CSGBox" parent="Box2"]
material = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Box2"]
shape = SubResource( 3 )

[node name="Sphere" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7786, 3.47102, -27.7545 )
linear_velocity = Vector3( 0, 0, 10 )

[node name="CSGSphere" type="CSGSphere" parent="Sphere"]
transform = Transform( 0.707255, 0, -0.706959, 0, 1, 0, 0.706959, 0, 0.707255, 0, 0, 0 )
radius = 2.0
material = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Sphere"]
shape = SubResource( 7 )

[node name="Sphere2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.90629, 3.47102, -7.2221 )

[node name="CSGSphere" type="CSGSphere" parent="Sphere2"]
transform = Transform( 0.707255, 0, -0.706959, 0, 1, 0, 0.706959, 0, 0.707255, 0, 0, 0 )
material_override = SubResource( 12 )
radius = 2.0

[node name="CollisionShape" type="CollisionShape" parent="Sphere2"]
shape = SubResource( 7 )

[node name="Sphere3" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.90629, 38.9166, 2.12853 )

[node name="CSGSphere" type="CSGSphere" parent="Sphere3"]
transform = Transform( 0.707255, 0, -0.706959, 0, 1, 0, 0.706959, 0, 0.707255, 0, 0, 0 )
material_override = SubResource( 12 )
radius = 2.0

[node name="CollisionShape" type="CollisionShape" parent="Sphere3"]
shape = SubResource( 7 )

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62735e-07, -0.0476817, -0.998863, -7.76834e-09, 0.998863, -0.0476817, 1, 3.55271e-15, -1.62921e-07, -27.0239, 11.8384, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[node name="GIProbe" type="GIProbe" parent="WorldEnvironment"]
extents = Vector3( 60.5487, 32.9049, 63.1188 )
data = SubResource( 14 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 30.1568, 0 )
light_energy = 1.52
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -52.0
margin_right = 158.0
margin_bottom = -10.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/UI/HBoxContainer"]
margin_right = 190.0
margin_bottom = 42.0
toggle_mode = true
text = "ATTRACTOR COLLISION OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 194.0
margin_right = 247.0
margin_bottom = 42.0
toggle_mode = true
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 251.0
margin_right = 316.0
margin_bottom = 42.0
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="CanvasLayer/UI/HBoxContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/HBoxContainer/Button3" to="." method="_on_Button3_toggled"]
[connection signal="pressed" from="CanvasLayer/UI/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="toggled" from="CanvasLayer/UI/HBoxContainer/Button2" to="." method="_on_Button_toggled"]
